2011-06-14  Shujing Zhao  <pearly.zhao@oracle.com>

	* include/sys/controlregs.h: Remove.
	* include/sys/mkdev.h: Likewise.
	* include/sys/pset.h: Likewise.
	* include/sys/regset.h: Likewise.
	* include/sys/signal2.h: Likewise.
	* include/sys/statvfs.h: Likewise.
	* include/sys/sysi86.h: Likewise.
	* include/sys/time_impl.h: Likewise.
	* include/sys/trap.h: Likewise.
	* uts/common/sys/bitmap.h: Likewise.
	* uts/intel/sys/frame.h: Likewise.
	* include/sys/bitmap.h: Remove the unused header files.
	* include/sys/elftypes.h: Likewise.
	* include/sys/int_types.h: Likewise.
	* include/sys/procfs.h: Likewise.
	* include/sys/procfs_isa.h: Likewise.
	* libproc/amd64/Pisadep.c: Likewise.
	* libproc/common/libproc.h: Likewise.

2011-06-09  Shujing Zhao  <pearly.zhao@oracle.com>

	Remove the structures that are correspond to Solaris proc files.

	* include/sys/elf.h: Clean
	* include/sys/procfs.h: Clean and remove pr_flags, pr_wflags.
	(lwpstatus_t, pstatus_t, lwpsinfo_t, psinfo_t, prcred_t, priovec_t,
	 prusage_t, prpageheader_t, prasmap_t, prheader_t, lwpstatus32_t,
	 pstatus32_t, lwpsinfo32_t, psinfo32_t, prmap32_t, prxmap32_t,
	 prcred32_t, prwatch32_t): Remove.
	* libproc/common/proc.c: New.
	* libproc/common/makefile: Add proc.o to libproc.
	* libproc/amd64/Pisadep.c (int_syscall_instr, syscall_instr): Unused,
	remove.
	(Ppltdest): Set dmodel.
	(Pissyscall): Unused, remove.
	(Pissyscall_prev): Likewise.
	* libproc/common/Pcontrol.c (Pxcreate): Remove setting P->status.
	(Pgrab): Likewise.
	(Pfree): Remove check P->core.
	(Pstatus): Unused, remove.
	(Pcontent): Remove return core.
	* libproc/common/Pcontrol.h: Clean.
	(lwp_info_t, core_info_t): Remove.
	(ps_prochandle): Remove status and core.
	* libproc/common/Psymtab.c (get_saddrs): Set dmodel.
	(file_differs): Likewise.
	(fake_elf): Likewise.
	* libproc/common/libproc.h: Clean and add ps_getpid prototype.
	* libdtrace/dt_pid.c (dt_pid_per_sym): Use ps_getpid.
	(dt_pid_create_usdt_probes): Likewise.